Finally done - fix spacing, scrolling etc

--- a/src/components/LandingPage/landingPage.css
+++ b/src/components/LandingPage/landingPage.css
@@ -1,10 +1,6 @@
 .bgColor {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
+    height: auto;
+    width: auto;
     background: #f9f8f8;
 }
 
@@ -27,6 +23,7 @@
 }
 
 .landingFooterText {
+    padding-left: 1vw;
     font-size: 18px;
     font-weight: 500;
     line-height: 1.06;
